# escucha

./: .SRCINFO  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  build.rs  escucha.install  escucha.spec  install.sh  io.github.escucha.desktop  requirements.txt  run
.github/workflows/: ci.yml
docs/: gtk-ui-design-spec.md
docs/proposed features/: tray-model-picker.md
escucha/: app.py  gui.py
include/escucha/: gui_bridge.h
scripts/: diagnostics-loop.sh
src/: audio.rs  bridge.rs  config.rs  diagnostics.rs  gui.rs  gui_bridge.cpp  gui_bridge.rs  input.rs  lib.rs  main.rs  paste.rs  preflight.rs  service.rs  transcribe.rs
src/qml/: Main.qml
systemd/: escucha.service  ydotoold.service
