[package]
name = "escucha"
version = "0.1.0"
edition = "2024"
description = "Hold-to-talk speech-to-text for Linux"
license = "MIT"

[dependencies]
# GUI
gtk4 = { version = "0.10", features = ["v4_18"] }
libadwaita = { version = "0.8", package = "libadwaita", features = ["v1_6"] }

# Async channels (for GUI ↔ service thread communication)
async-channel = "2"

# Speech-to-text (whisper.cpp bindings)
whisper-rs = "0.14"

# Linux input devices
evdev = "0.12"

# Audio recording
cpal = "0.15"
hound = "3.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
rust-ini = "0.21"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
tempfile = "3"
which = "7"
nix = { version = "0.29", features = ["signal", "process", "poll"] }
libc = "0.2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
